<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="left">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bmiHeader"
        android:id="@+id/bmiHeader"
        android:textSize="40sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterHeight"
        android:id="@+id/heightText"
        android:layout_marginTop="109dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightText"
        android:id="@+id/weightText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:layout_centerVertical="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/heightInput"
        android:layout_below="@+id/heightText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/weightText"
        android:layout_alignEnd="@+id/weightText"
        android:inputType="number|numberDecimal"
        android:singleLine="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightInput"
        android:layout_below="@+id/weightText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/weightText"
        android:layout_alignEnd="@+id/weightText"
        android:inputType="number|numberDecimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcBMI"
        android:id="@+id/btnCalcBMI"
        android:layout_marginTop="38dp"
        android:onClick="calculateBMI"
        android:layout_below="@+id/weightInput"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiOut"
        android:id="@+id/bmiOut"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/btnCalcBMI"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:id="@+id/bmiStatus"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_alignWithParentIfMissing="false"
        android:clickable="true"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/bmiOut"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
